<resources>
    <string name="app_name">Restaurant</string>
    <string name="title_activity_maps">Map</string>
    <string name="breaking_news_txt">Restaurents</string>
    <string name="search_news_txt">Search news</string>
    <string name="saved_news_txt">Saved news</string>
    <string name="Favoris_fragment">Hello from favoris</string>
    <string name="Recherche_fragment">Hello from recherche</string>
    <string name="hello_search_news_fragment">Hello from search news fragment</string>
    <string name="hello_article_fragment">Hello from article fragment</string>
    <string name="cover_image_txt">"image "</string>
    <string name="allNews">Chercher des articles</string>
    <string name="chercher">Chercher</string>
    <string name="RechercheArticle">Recherche article</string>
    <string name="btnRechercher">Rechercher</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nerby_restaurants">Proche de moi</string>
    <string name="Saved_restaurants">Les favoris</string>
    <string name="Search_Restaurants">Recherche</string>
    <string name="Carte_fragment">Map</string>
    <string name="Resto">Resto Action Rapide Inc.</string>
    <string name="Auth">Se connecter avec Google</string>
    <string name="Auth2">Se connecter avec Facebook</string>
    <string name="facebook_app_id">386886175858343</string>
    <string name="fb_login_protocol_scheme">fb386886175858343</string>
    <string name="facebookLogin">Se connecter avec Facebook</string>
    <string name="Senregistrer">S\'enregistrer</string>
    <string name="Utilisateur">Utilisateur</string>
    <string name="MotDePasse">Mot de passe</string>
    <string name="Courriel">Courriel</string>
    <string name="BoutonEnregistrer">S\'enregistrer</string>
    <string name="ConfirmerMotDePasse">Confirmer mot de passe</string>
    <string name="SeConnecter">Se connecter</string>
    <string name="UserEmail">Nom d\'utilisateur ou Courriel</string>


</resources>