<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.qc.cgodin.restaurant.Authentification.SignInActivity">

    <Button
        android:id="@+id/btnConnecter"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:background="#020202"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/SeConnecter"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.536" />

    <Button
        android:id="@+id/Senregistrer"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:background="#fff"
        android:drawableStart="@drawable/ic_baseline_restaurant_24"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/Senregistrer"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.748" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:background="#fff"
        android:drawableStart="@drawable/ic_google"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/Auth"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.843" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="124dp"
        android:layout_height="113dp"
        android:layout_marginStart="143dp"
        android:layout_marginEnd="144dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005"
        app:srcCompat="@drawable/ic_baseline_restaurant_24" />

    <TextView
        android:id="@+id/tvNom"
        android:layout_width="284dp"
        android:layout_height="34dp"
        android:layout_marginStart="163dp"
        android:layout_marginEnd="185dp"
        android:text="@string/Resto"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26999998"
        tools:text="@string/Resto" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="351dp"
        android:layout_height="52dp"
        android:drawableStart="@drawable/ic_facebook_app_logo"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/facebookLogin"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917" />

    <EditText
        android:id="@+id/edUserNameEmailLogin"
        android:layout_width="348dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/UserEmail"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354" />

    <EditText
        android:id="@+id/edPasswordLogin"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/MotDePasse"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.439" />

</androidx.constraintlayout.widget.ConstraintLayout>